--- a/Client/AngularAmazono/src/app/app.component.html
+++ b/Client/AngularAmazono/src/app/app.component.html
@@ -6,7 +6,10 @@
         <button class="navbar-toggler" (click)="isCollapsed = !isCollapsed">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div [ngbCollopse]="isCollpased" style="align-items: left;margin-left: 50px"
+
+
+        <!--<div [ngbCollopse]="isCollpased" style="align-items: left;margin-left: 50px"-->
+        <div [ngbCollapse]="isCollapsed" style="align-items: left;margin-left: 50px"
              class="collapse navbar-collapse flex-column" id="navbarNav">
             <div class="input-group w-75">
                 <input type="text" name="search" class="form-control" [(ngModel)]="searchTerm" (keyup.enter)="search()">
@@ -14,7 +17,7 @@
                     <i class="fa fa-search"></i>
                 </span>
             </div>
-            <div class="w-100">
+            <!--<div class="w-100">
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a (click)="collapse()" routerLink="/categories" routerLinkActive="active" class="nav-link">Categories</a>
@@ -45,8 +48,11 @@
                         </a>
                     </li>
                 </ul>
-            </div>
+            </div>-->
         </div>
+
+
+
     </div>
 </nav>
 
